wordpress/service-mysql.yml
---

apiVersion: v1

kind: Service

metadata:
  name: mysql-service
  labels:
    app: wordpress
    server: database

spec:
  ports:
    - port: 3306
  selector:
    app: wordpress
    server: database
