wordpress/service-wordpress.yml
---

apiVersion: v1

kind: Service

metadata:
  name: wordpress-service
  labels:
    app: wordpress
    server: web

spec:
  ports:
    - port: 80
  selctor:
    app: wordpress
    server: web
  type: LoadBalancer
