wordpress/ingress.yaml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: wordpress-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: "nginx"
    nginx.org/server-snippets: "server_name ~^.*$;"
spec:
  rules:
   - host: '*.eu-central-1.compute.amazonaws.com'      
     http:
        paths:
          - path: /
            backend:
              serviceName: wordpress-service
              servicePort: 80
